k8s/infrastructure/controllers/crossplane/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: crossplane-controller
  namespace: crossplane-system
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
